# serhat-terminal

./: .env  .env.example  Makefile  README.md  alembic.ini  app.py  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py
app/ai_reports/: prompts.py  reporter.py
app/api/: deps.py  main.py
app/config/: settings.py
app/core/: constants.py  enums.py  exceptions.py  interfaces.py  models.py
app/dashboard/: data_provider.py  main.py
app/dashboard/pages/: ai_report.py  live_signals.py  open_positions.py  overview.py  risk_monitor.py  (+2 more)
app/data/: providers.py  resamplers.py  validators.py
app/notifications/: base.py  messages.py  telegram.py
app/paper_engine/: engine.py  reconciliation.py
app/portfolio/: risk.py
app/research/: backtest.py  metrics.py  optimizer.py  ranking.py  robustness.py  splitters.py  walk_forward.py
app/risk/: emergency.py  rules.py
app/services/: healthcheck.py  heartbeat.py  reconciliation.py  scheduler.py
app/storage/: db.py  models.py
app/strategies/: __init__.py  base.py  breakout.py  mean_reversion.py  registry.py  sma_cross.py
app/workers/: celery_app.py  jobs.py
config/: settings.yaml
deploy/: Dockerfile.api  Dockerfile.dashboard  Dockerfile.worker
docs/: architecture.md  module_map.md
scripts/: bootstrap_db.py  windows_run_dashboard.bat  windows_run_dashboard.ps1
tests/: test_api_health.py  test_config.py  test_emergency.py  test_metrics.py  test_paper_engine.py  test_robustness.py  test_splitters.py  test_telegram_message.py
(+2 files in other folders)
